--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "node-fetch": "^3.2.0"
   },
   "scripts": {
     "watch": "npx tailwindcss -i ./resource/css/tailwind.css -o ./app/core/asset/css/app.css --watch",
